# cmdn-api

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: main_cmdn-api-gateway.yml
api-gateway/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
api-gateway/src/app/: run.py
api-gateway/src/app/di_container/: __init__.py  container.py  settings.py
api-gateway/src/app/di_container/providers/: __init__.py  auth_provider.py  domain_provider.py  infrastructure_provider.py  use_case_provider.py
api-gateway/src/app/domain/model/: base.py
api-gateway/src/app/domain/model/meeting/: __init__.py  meeting.py  meeting_repository.py
api-gateway/src/app/domain/model/task/: __init__.py  task.py  task_repository.py
api-gateway/src/app/domain/model/user/: __init__.py  user.py  user_repository.py
api-gateway/src/app/domain/support/audio_analyzer/: __init__.py  audio_analyzer.py
api-gateway/src/app/domain/support/file_storage/: __init__.py  file_storage.py
api-gateway/src/app/domain/support/logger/: __init__.py  logger.py
api-gateway/src/app/domain/support/task_queue/: __init__.py  task_queue.py
api-gateway/src/app/domain/value_objects/: __init__.py  base.py
api-gateway/src/app/handler/: __init__.py
api-gateway/src/app/handler/api/: __init__.py  app.py
api-gateway/src/app/handler/api/middleware/: __init__.py  auth_middleware.py
api-gateway/src/app/handler/api/routes/: __init__.py
api-gateway/src/app/handler/api/routes/health/: __init__.py  health_route.py
api-gateway/src/app/handler/api/routes/meeting/: __init__.py  create_meeting_route.py  delete_meeting_route.py  find_many_task_route.py  find_meeting_list_route.py  find_meeting_route.py  find_meeting_status_route.py  update_meeting_route.py  upload_audio_route.py
api-gateway/src/app/handler/api/routes/user/: __init__.py  create_user_route.py
api-gateway/src/app/infrastructure/: __init__.py
api-gateway/src/app/infrastructure/auth/: __init__.py  jwks_cache.py  jwt_validator.py  type.py
api-gateway/src/app/infrastructure/db_client/: __init__.py  flusher.py  flusher_impl.py  transaction_manager.py  transaction_manager_impl.py
api-gateway/src/app/infrastructure/file_storage/: __init__.py  s3_storage_impl.py
api-gateway/src/app/infrastructure/logger/: __init__.py  logger_impl.py
api-gateway/src/app/infrastructure/persistence/repository/: __init__.py  meeting_repository_impl.py  task_repository_impl.py  user_repository_impl.py
api-gateway/src/app/infrastructure/persistence/sqlalchemy/: metadata.py
api-gateway/src/app/infrastructure/persistence/sqlalchemy/alembic/: env.py
api-gateway/src/app/infrastructure/persistence/sqlalchemy/alembic/versions/: 2025_12_21_1343-4d68298640cb_create_meetings_table.py  2025_12_21_1344-2040dc49ab40_create_tasks_table.py  2025_12_24_1812-46d32f1ca0b4_add_progress_metadata_to_meetings.py  2025_12_25_0100-a1b2c3d4e5f6_create_meeting_progress_table.py  2026_01_11_2227-25c0586a3705_create_users_table.py  2026_01_15_1414-810e941f1204_add_duration_to_meetings.py  2026_01_15_1615-23a8faff22f0_update_user_duration_to_float_and_add_.py
api-gateway/src/app/infrastructure/persistence/sqlalchemy/mappings/: __init__.py  meeting_mapping.py  task_mapping.py  user_mapping.py
api-gateway/src/app/infrastructure/task_queue/: __init__.py  celery_queue_impl.py
api-gateway/src/app/use_case/: __init__.py  create_meeting_use_case.py  create_user_use_case.py  delete_meeting_use_case.py  find_many_task_use_case.py  find_meeting_list_use_case.py  find_meeting_status_use_case.py  find_meeting_use_case.py  interfaces.py  update_meeting_use_case.py  upload_audio_use_case.py
api-gateway/src/app/util/: __init__.py  auth_exceptions.py  exceptions.py  response_models.py  result.py
api-gateway/src/app/util/enums/: __init__.py  status.py  task_status.py  user_type.py
summarize-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
summarize-service/src/: __main__.py  config.py
summarize-service/src/database/: __init__.py  repository.py  session.py
summarize-service/src/models/: __init__.py  meeting.py  task.py
summarize-service/src/providers/: __init__.py  llm.py
summarize-service/src/services/: __init__.py  meeting.py  summarization.py
summarize-service/src/tasks/: __init__.py  celery_app.py  summarize.py  worker.py
summarize-service/src/utils/: __init__.py  enums.py  exceptions.py  prompts.py  text.py
transcribe-service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
transcribe-service/src/: __init__.py  __main__.py  config.py  enums.py  exceptions.py  models.py
transcribe-service/src/cache/: __init__.py  chunks.py  redis.py
transcribe-service/src/database/: __init__.py  connection.py  orm_models.py  repository.py
transcribe-service/src/providers/: __init__.py  base.py  factory.py  gpu_whisper.py  litellm.py  mlx_whisper.py
transcribe-service/src/services/: __init__.py  audio.py  meeting.py  transcription.py
transcribe-service/src/streaming/: __init__.py  processor.py  stream_reader.py
transcribe-service/src/tasks/: __init__.py  celery_app.py  transcription_tasks.py  worker.py
transcribe-service/src/utils/: __init__.py  helpers.py  logger.py
