[project]
name = "audio-platform-summarize-service"
version = "0.1.0"
description = "Summarize service for audio processing platform"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.2.1",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.0.0",
]

[dependency-groups]
dev = [
    "ruff==0.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
preview = true

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "C90",
    "DTZ",
    "E",
    "ERA001",
    "F",
    "FLY",
    "I",
    "LOG",
    "N",
    "PERF",
    "PL",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    "TCH",
    "TID",
    "UP",
    "W",
]
ignore = [
    "A002",      # Argument shadowing builtin (id, input are common in domain models)
    "ARG001",    # Unused self in Celery tasks (required by Celery)
    "ARG002",    # Unused method argument (sometimes for interface consistency)
    "E501",      # Line too long (formatter handles this, especially for Vietnamese text)
    "N818",
    "PLR0913",
    "PLR0917",
    "PLR2004",   # Magic values
    "PLR6301",
    "PTH123",
    "RUF005",    # Iterable unpacking (current style is clear)
    "TC001",
    "TC002",
    "TC003",
    "TC006",
    "UP015",
    "UP042",     # StrEnum not available in Python 3.11
    "UP046",     # Generic syntax
    "UP047",     # Generic function syntax
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true
